# dafne-dl

./: DynamicDLModel.py  LocalModelProvider.py  README.md  RemoteModelProvider.py  interfaces.py  misc.py  setup.cfg
common/: DataGenerators.py  biascorrection.py  create_train.py  padorcut.py  preprocess_train.py
labels/: leg.py  thigh.py  utils.py
src/dafne_dl/: DynamicDLModel.py  RemoteModelProvider.py  __init__.py
src/dafne_dl/common/: biascorrection.py  preprocess_train.py
src/dafne_dl/labels/: liver.py
src/dafne_dl/resources/: runtime_dependencies.cfg
