[metadata]
name = dafne-dl
version = attr: dafne_dl.VERSION
author = Francesco Santini
author_email = francesco.santini@unibas.ch
description = Deep Learning module for Dafne
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dafne-imaging/dafne-dl
project_urls =
    Bug Tracker = https://github.com/dafne-imaging/dafne-dl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scikit-image
    scipy
    dill
    requests
    importlib_resources ; python_version < "3.10"
    flexidep
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.cfg